--- a/pages/index.html
+++ b/pages/index.html
@@ -8,6 +8,7 @@
   <body>
     <main>
       <h1>|Projet Git</h1>
+      <ig src="https://picsum.photos/200/300" lt="toto" />
     </main>
   </body>
 </html>
