fix(21): correction de l'image
la balise était mal ecrite

--- a/pages/index.html
+++ b/pages/index.html
@@ -8,7 +8,7 @@
   <body>
     <main>
       <h1>|Projet Git</h1>
-      <ig src="https://picsum.photos/200/300" lt="toto" />
+      <img src="https://picsum.photos/200/300" alt="toto" />
     </main>
   </body>
 </html>
