feat(18): ajout d'un paragraphe
le paragraphe contient du loram ipsum

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,6 +9,7 @@
     <main>
       <h1>|Projet Git</h1>
       <img src="https://picsum.photos/200/300" alt="toto" />
+      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quas iure dolorum unde libero cum asperiores, dolore non in esse minus aut dolores consectetur laboriosam error a harum veritatis nobis.  </p>
     </main>
   </body>
 </html>
