feat(26): ajout navbar
ajout d'une navbar dans la page html
ajout d'une balise header

--- a/pages/index.html
+++ b/pages/index.html
@@ -7,10 +7,23 @@
     <link rel="stylesheet" href="main.css" />
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="#">accueil</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
     <main>
       <h1>|Projet Git</h1>
       <img src="https://picsum.photos/200/300" alt="toto" />
-      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quas iure dolorum unde libero cum asperiores, dolore non in esse minus aut dolores consectetur laboriosam error a harum veritatis nobis.  </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quas
+        iure dolorum unde libero cum asperiores, dolore non in esse minus aut
+        dolores consectetur laboriosam error a harum veritatis nobis.
+      </p>
     </main>
   </body>
 </html>
