--- a/pages/index.html
+++ b/pages/index.html
@@ -10,7 +10,14 @@
     <main>
       <h1>|Projet Git</h1>
       <img src="https://picsum.photos/200/300" alt="toto" />
-      <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quas iure dolorum unde libero cum asperiores, dolore non in esse minus aut dolores consectetur laboriosam error a harum veritatis nobis.  </p>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quas
+        iure dolorum unde libero cum asperiores, dolore non in esse minus aut
+        dolores consectetur laboriosam error a harum veritatis nobis.
+      </p>
     </main>
+    <footer>
+      <p>coucou</p>
+    </footer>
   </body>
 </html>
