--- a/pages/index.html
+++ b/pages/index.html
@@ -19,11 +19,13 @@
     <main>
       <h1>|Projet Git</h1>
       <img src="https://picsum.photos/200/300" alt="toto" />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quas
-        iure dolorum unde libero cum asperiores, dolore non in esse minus aut
-        dolores consectetur laboriosam error a harum veritatis nobis.
-      </p>
+      <section>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quas
+          iure dolorum unde libero cum asperiores, dolore non in esse minus aut
+          dolores consectetur laboriosam error a harum veritatis nobis.
+        </p>
+      </section>
     </main>
     <footer>
       <p>coucou</p>
